# fondant

./: Cargo.toml  readme.md
confondant_derive/: Cargo.toml
confondant_derive/src/: lib.rs
fondant/: Cargo.toml  readme.md
fondant/src/: lib.rs
fondant_deps/: Cargo.toml  readme.md
fondant_deps/src/: lib.rs
fondant_derive/: Cargo.toml  readme.md
fondant_derive/src/: lib.rs
src/: lib.rs
