[package]
name = "fondant"
version = "0.1.2"
authors = ["Akshay <nerdypepper@tuta.io>"]
description = "Macro based library to take the boilerplate out of configuration handling"
readme = "readme.md"
repository = "https://github.com/nerdypepper/fondant"
license = "MIT"
keywords = ["cli", "configuration", "macro"]
categories = ["command-line-utilities", "config"]
edition = "2018"

[dependencies]
fondant_derive = {version = "0.1.1", path = "../fondant_derive"}
fondant_deps = {version = "0.1.1", path = "../fondant_deps"}
