[package]
name = "fondant_deps"
version = "0.1.0"
authors = ["Akshay <nerdypepper@tuta.io>"]
description = "External dependencies to supplement fondant"
readme = "readme.md"
repository = "https://github.com/nerdypepper/fondant"
license = "MIT"
keywords = ["cli", "configuration", "macro"]
categories = ["command-line-utilities", "config"]
edition = "2018"

[dependencies]
toml = "^0.5"
serde_yaml = "0.8"
serde_json = "1.0.48"
directories = "2.0"

[dependencies.serde]
version = "1.0.103"
features = ["derive"]

[dependencies.syn]
version = "1.0"
features = ["full"]
