[package]
name = "fondant_derive"
version = "0.1.1"
authors = ["Akshay <nerdypepper@tuta.io>"]
description = "Core macros of fondant"
readme = "readme.md"
repository = "https://github.com/nerdypepper/fondant"
license = "MIT"
keywords = ["cli", "configuration", "macro"]
categories = ["command-line-utilities", "config"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[lib]
proc-macro = true
